--- a/.github/workflows/rust_build_and_test.yml
+++ b/.github/workflows/rust_build_and_test.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Rust toolchain
-        uses: rustup update stable
+        run: rustup update stable
 
       - name: Check formatting
         run: cargo fmt --check
